--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.53.0",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "openai": "^5.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.3",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.8"
   },
