--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "highlight.js": "^11.11.1",
     "react": "^19.1.0",
+    "react-console-emulator": "^5.0.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-terminal-ui": "^1.4.0",
     "react-toggle-dark-mode": "^1.1.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.8"
