--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "highlight.js": "^11.11.1",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-console-emulator": "^5.0.2",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-terminal-ui": "^1.4.0",
